@@ -1,3 +1,13 @@
+2015-03-19 Ben Shi <powerstudio1st AT 163 DOT com>
+	* src/SDCCglue.c:
+	  Fix a bug in a global char array initialized by a string.
+	* src/SDCCast.c:
+	  Fix a bug in a local static global array initialization.
+	* support/regression/tests/bug-1953.c:
+	  Improve test case.
+	* doc/sdccman.lyx:
+	  Suggest msys while build SDCC with VS2010.
+
 2015-03-16 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
